import { Object3D } from "./entities/Object3D";
import { View3D } from "./View3D";

export class Scene3D extends Object3D {
  public view: View3D;
}
