import { Entity } from "./Entity";

export class Object3D extends Entity {}
