import { CEvent } from "../../../event/CEvent";
import { CEventDispatcher } from "../../../event/CEventDispatcher";
import { CResizeEvent } from "../../../event/CResizeEvent";
import { CanvasConfig } from "./CanvasConfig";

class Context3D extends CEventDispatcher {
  public adapter: GPUAdapter;
  public device: GPUDevice;
  public context: GPUCanvasContext;
  public aspect: number;
  public presentationSize: number[] = [0, 0];
  public presentationFormat: GPUTextureFormat;
  public canvas: HTMLCanvasElement;
  public windowWidth: number;
  public windowHeight: number;
  public canvasConfig: CanvasConfig;
  public super: number = 1.0;
  private _pixelRatio: number = 1.0;
  private _resizeEvent: CEvent;

  public get pixelRatio() {
    return this._pixelRatio;
  }

  async init(canvasConfig?: CanvasConfig): Promise<boolean> {
    this.canvasConfig = canvasConfig;

    if (canvasConfig && canvasConfig.canvas) {
      this.canvas = canvasConfig.canvas;
      if (this.canvas === null) {
        throw new Error("no Canvas");
      }
      const _width = this.canvas.clientWidth,
        _height = this.canvas.clientHeight;
      // TODO: 이게 어떻게 다를수가 있지?
      if (_width != this.canvas.clientWidth) {
        this.canvas.style.width = _width + "px";
      }
      if (_height != this.canvas.clientHeight) {
        this.canvas.style.height = _height + "px";
      }
    } else {
      this.canvas = document.createElement("canvas");
      this.canvas.style.position = `absolute`;
      this.canvas.style.top = "0px";
      this.canvas.style.left = "0px";
      this.canvas.style.width = "100%";
      this.canvas.style.height = "100%";
      this.canvas.style.zIndex = canvasConfig?.zIndex
        ? canvasConfig.zIndex.toString()
        : "0";
      document.body.appendChild(this.canvas);
    }

    // set canvas bg
    if (canvasConfig && canvasConfig.backgroundImage) {
      this.canvas.style.background = `url(${canvasConfig.backgroundImage})`;
      this.canvas.style["background-size"] = "cover";
      this.canvas.style["background-position"] = "center";
    } else {
      this.canvas.style.background = "transparent";
    }

    // prevent touch scroll
    this.canvas.style["touch-action"] = "none";
    this.canvas.style["object-fit"] = "cover";

    // check webgpu support
    if (navigator.gpu === undefined) {
      throw new Error("Your browser does not support WebGPU!");
    }
    // request adapter
    this.adapter = await navigator.gpu.requestAdapter({
      powerPreference: "high-performance",
      // powerPreference: 'low-power',
    });
    if (this.adapter == null) {
      throw new Error("Your browser does not support WebGPU!");
    }
    // request device
    this.device = await this.adapter.requestDevice({
      requiredFeatures: [
        "bgra8unorm-storage",
        "depth-clip-control",
        "depth32float-stencil8",
        "indirect-first-instance",
        "rg11b10ufloat-renderable",
      ],
      requiredLimits: {
        minUniformBufferOffsetAlignment: 256,
        maxStorageBufferBindingSize:
          this.adapter.limits.maxStorageBufferBindingSize,
      },
    });
    if (this.device == null) {
      throw new Error("Your browser does not support WebGPU!");
    }

    this._pixelRatio =
      this.canvasConfig?.devicePixelRatio || window.devicePixelRatio || 1;
    this._pixelRatio = Math.min(this._pixelRatio, 2.0);

    // configure webgpu context
    this.device.label = "device";
    this.presentationFormat = navigator.gpu.getPreferredCanvasFormat();
    this.context = this.canvas.getContext("webgpu");
    this.context.configure({
      device: this.device,
      format: this.presentationFormat,
      usage: GPUTextureUsage.COPY_DST | GPUTextureUsage.RENDER_ATTACHMENT,
      alphaMode: "premultiplied",
      colorSpace: `srgb`,
    });

    this._resizeEvent = new CResizeEvent(CResizeEvent.RESIZE, {
      width: this.windowWidth,
      height: this.windowHeight,
    });
    const resizeObserver = new ResizeObserver(() => {
      this.updateSize();
      //Texture.destroyTexture()
    });
    resizeObserver.observe(this.canvas);
    this.updateSize();
    return true;
  }

  public updateSize() {
    let w = Math.floor(this.canvas.clientWidth * this.pixelRatio * this.super);
    let h = Math.floor(this.canvas.clientHeight * this.pixelRatio * this.super);
    if (w != this.windowWidth || h != this.windowHeight) {
      this.canvas.width = this.windowWidth = w;
      this.canvas.height = this.windowHeight = h;
      this.presentationSize[0] = this.windowWidth;
      this.presentationSize[1] = this.windowHeight;
      this.aspect = this.windowWidth / this.windowHeight;

      this._resizeEvent.data.width = this.windowWidth;
      this._resizeEvent.data.height = this.windowHeight;
      this.dispatchEvent(this._resizeEvent);
    }
  }
}

export let webGPUContext = new Context3D();
